Prevent overlapping arrays for AES-CBC